# Predict-Health-Risk-IA

./: .gitignore  README.md  app.py  launcher.py  model.ipynb  modelo_cardiaco.pkl  pyproject.toml  requirements.txt  train.py
.github/workflows/: test.yml
Documents/: app.py
llm/: chat_tab.py  client.py  tools.py
src/: Data-Analysis.ipynb  model.ipynb
src/DataSet/: heart_cleaned.csv
src/app/: app.py
src/configs/: model_features.py  paths.py  train.yaml
src/llm/: chat_tab.py  client.py  tools.py
test/: test_load.py  test_missing_values.py  test_predict.py
